--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=DESKTOP-0P9TULE\\SQLEXPRESS;Initial Catalog=ecommerce-app-db;Integrated Security=True;Pooling=False"
+
+  },
   "AllowedHosts": "*"
 }
